# Llma2-on-raspbpi

./: CMakeLists.txt  README.md  llamaGo.cpp  note.md
